package com.example.demo.southbound.Enum;

public enum ApplicationStatus {
    APPLIED,
    INTERVIEW_SCHEDULED,
    INTERVIEW_DONE,
    OFFER_RECEIVED,
    OFFER_ACCEPTED,
    REJECTED,
    WITHDRAWN
}