package com.example.demo.southbound.Enum;

public enum ExperienceLevel {
    ENTRY_LEVEL, MID_LEVEL, SENIOR_LEVEL, EXPERT
}