package com.example.demo.southbound.Enum;

public enum JobPostingStatus {
    ACTIVE, CLOSED
}