package com.example.demo.southbound.Enum;

public enum JobType {
    FULL_TIME, PART_TIME, CONTRACT, REMOTE, INTERNSHIP
}