@startuml

' =======================
' Core Entities
' =======================

class User {
    id
    username
    email
}

class Role {
    id
    name
}


class Skill {
    id
    name
}


class Job {
    id
    title
    company
}

class JobRecommendation {
    id
    score
}

class InterviewSession {
    id
    topic
}

class InterviewQuestion {
    id
    questionText
}

class UserAnswer {
    id
    answer
    correct
}

class WorkExperience {
    id
    company
    position
}

class UserSkill {
    id
    level
    yearsOfExperience
}

' =======================
' CV Entities (FIXED)
' =======================

class Cv {
    id
    userId
}

class CvEducation {
    id
    cvId
}

class CvInternship {
    id
    cvId
}

class CvJob {
    id
    cvId
}

class CvProject {
    id
    cvId
}

class CvSkill {
    id
    cvId
}

class ProjectTechnology {
    id
    projectId
    technology
}

' =======================
' Application Tracker Entities
' =======================

class Application {
    id
    jobTitle
    company
    location
    salary
    appliedDate
    status: ApplicationStatus
    notes
}

class ApplicationStatus <<enumeration>> {
    APPLIED
    INTERVIEW_SCHEDULED
    INTERVIEW_DONE
    OFFER_RECEIVED
    OFFER_ACCEPTED
    REJECTED
    WITHDRAWN
}

' =======================
' Recruiter Entities
' =======================

class JobPosting {
    id
    title
    companyName
    location
    jobType: JobType
    experienceLevel: ExperienceLevel
    salaryRange
    description
    deadline
    status: JobPostingStatus
    applicationCount
    postedAt
}

class JobType <<enumeration>> {
    FULL_TIME
    PART_TIME
    CONTRACT
    REMOTE
    INTERNSHIP
}

class ExperienceLevel <<enumeration>> {
    ENTRY_LEVEL
    MID_LEVEL
    SENIOR_LEVEL
    EXPERT
}

class JobPostingStatus <<enumeration>> {
    ACTIVE
    CLOSED
}

' =======================
' Course Recommendation Entities
' =======================

class Course {
    id
    courseName
    url
    difficulty
    rating
}

class CourseRecommendation {
    id
    missingSkill
    matchedSkill
    matchScore
    recommendedAt
}

' =======================
' Relationships
' =======================

User "*" --> "1" Role


User "1" --> "*" WorkExperience
User "1" --> "*" UserSkill
User "1" --> "1" Cv

UserSkill "*" --> "1" Skill
Job "*" -- "*" Skill

JobRecommendation "*" --> "1" User
JobRecommendation "*" --> "1" Job

InterviewSession "*" --> "1" User
InterviewSession "*" --> "*" InterviewQuestion


UserAnswer "*" --> "1" User
UserAnswer "*" --> "1" InterviewQuestion
Cv "1" --> "*" CvEducation
Cv "1" --> "*" CvInternship
Cv "1" --> "*" CvJob
Cv "1" --> "*" CvProject
Cv "1" --> "*" CvSkill

' Project technologies belong to CvProject (logical fix)
CvProject "1" --> "*" ProjectTechnology

CourseRecommendation "*" --> "1" User
CourseRecommendation "*" --> "1" Job
CourseRecommendation "*" --> "1" Course

Application "*" --> "1" User
Application "*" --> "1" ApplicationStatus

JobPosting "*" --> "1" User
JobPosting "*" --> "1" JobType
JobPosting "*" --> "1" ExperienceLevel
JobPosting "*" --> "1" JobPostingStatus

@enduml